[package]
name = "constellation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]


[dependencies]
cosmwasm-std = { version = "1.1.0", features = ["staking"] }
cw-storage-plus = "0.13.4"
cosmwasm-schema = "1.1.0"
thiserror = "1.0.31"

[dev-dependencies]
cw-multi-test = "0.13.4"

[profile.release]
debug = false
